import React from 'react';
import { ScrollView, Text, View, SafeAreaView } from 'react-native';
import { MultiSelect, Select, type Data } from '@rose-hulman/react-native-dropdown-selector';
import { useThemeStyles } from './styles';

const data: Data[] = [
  { label: 'Item 1' },
  { label: 'Item 2' },
  { label: 'Item 3', priority: true },
  { label: 'Item 4' },
  { label: 'Item 5' },
  { label: 'Item 6' },
  { label: 'Item 7', priority: true },
  { label: 'Item 8' },
];

const options: Data[] = [
  { label: 'Disabled' },
  { label: 'Searchable' },
];

const themes: Data[] = [
  { label: 'light' },
  { label: 'dark' },
  { label: 'system' },
];

function App(): React.JSX.Element {
  const [theme, setTheme] = React.useState<'light' | 'dark' | 'system'>('system');
  const onThemeSelect = (datum: Data) => {
    setTheme(datum.label as 'light' | 'dark' | 'system');
...
        <Select
          data={data}
          onSelect={onSimpleDataSelect}
          disabled={disabled}
          searchable={searchable}
          theme={theme}
          testID="SimpleDataSelect"
        />
        <Text style={style.text}>
          Selected: {item || 'None'} (scroll down)
        </Text>
        <View style={{ height: 500 }} />
        <Text
...
        <MultiSelect
          data={data}
          onSelect={onSimpleMultiDataSelect}
          disabled={disabled}
          searchable={searchable}
          theme={theme}
          testID='SimpleMultiDataSelect'
        />
        <View style={{ height: 400 }}/>
        <Text style={style.text}>Single Selects:</Text>
        <View style={{ flexDirection: 'row', height: 100 }}>
          <View style={{ flex: 1 }}>
            <Select
              data={data}
              onSelect={onDataSelect(1)}
              disabled={disabled}
              searchable={searchable}
              theme={theme}
              testID='DataSelect(1)'
            />
          </View>
          <View style={{ flex: 1 }}>
            <Select
              data={data}
              onSelect={onDataSelect(2)}
              disabled={disabled}
              searchable={searchable}
              theme={theme}
              testID='DataSelect(2)'
            />
          </View>
          <View style={{ flex: 1 }}>
            <Select
              data={data}
              onSelect={onDataSelect(3)}
              disabled={disabled}
              searchable={searchable}
              theme={theme}
              testID='DataSelect(3)'
            />
          </View>
        </View>
        <Text style={style.text}>Multi Selects:</Text>
        <View style={{ height: 350 }}>
          <View style={{ flexDirection: 'row' }}>
...
              } else if (data === options[1]) {
                setSearchable(false);
              }
            }}
            placeholderText='Selector Settings'
            theme={theme}
            testID='SelectorSettings'
          />
        </View>
        <View style={{ height: 200 }}>
          <Select
            data={themes}
            onSelect={onThemeSelect}
            disabled={disabled}
            searchable={searchable}
            placeholderText={`Select a theme`}
            theme={theme}
            testID='ThemeSelect'
          />
          <Text style={[style.text, { textAlign: 'center'}]}>
            Select a theme to see all the dropdowns change! Current theme is "{theme}"
          </Text>
        </View>
        <Text style={style.text}>Styled Single Select:</Text>
...
          data={data}
          onSelect={onSimpleDataSelect}
          disabled={disabled}
          searchable={searchable}
          defaultValue={data[0]}
          listHeight={300}
          placeholderText='I am very stylish'
          boxStyle={{
            alignSelf: 'center',
            backgroundColor: '#48c',
            borderTopRightRadius: 34,
            borderBottomRightRadius: 16,
            borderTopLeftRadius: 16,
...
            color: 'brown',
            fontSize: 16,
            height: 46,
            paddingHorizontal: 12,
            paddingTop: 14,
          }}
          testID='StyledSingleSelect'
        />
        <View style={{height: 50}} />
        <Text style={style.text}>Styled Multi Select:</Text>
        <MultiSelect
          data={data}
          onSelect={onSimpleMultiDataSelect}
...
            color: 'brown',
            fontSize: 16,
            height: 46,
            paddingHorizontal: 12,
            paddingTop: 14,
          }}
          testID='StyledMultiSelect'
        />
        <View style={{ height: 700 }} />
      </ScrollView>
    </SafeAreaView>
  );
}
...
